@@ -1,6 +1,6 @@
 
 export(glht, contrMat, univariate, adjusted, Ftest, Chisqtest, mcp, modelparm,
-       adjusted_calpha, univariate_calpha, parm)
+       adjusted_calpha, univariate_calpha, parm, cftest)
 
 S3method(summary, glht)
 S3method(confint, glht)
